--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,21 @@ go:
   - 1.9.2
   - master 
 
+before_install:
+    - go get -t ./...
+
+gobuild_args: -ldflags "-s -w"
+
 install: true
-
-matrix:
-  allow_failures:
-    - go: master
-  fast_finish: true
-
-notifications:
-  email: false
 
 #before_script:
 #  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 #  - go get github.com/moldabekov/spinner                        # Linter
 #  - go get honnef.co/go/tools/cmd/megacheck                     # Badass static analyzer/linter
 
-#script:
-#  - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
-#  - go test -v -race ./...                   # Run all the tests with the race detector enabled
-#  - go vet ./...                             # go vet is the official Go static analyzer
+script:
+  - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
+  - go vet ./...                             # go vet is the official Go static analyzer
 #  - megacheck ./...                          # "go vet on steroids" + linter
 #  - gocyclo -over 19 $GO_FILES               # forbid code with huge functions
 #- golint -set_exit_status $(go list ./...) # one last linter
