--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ gobuild_args: -ldflags "-s -w"
 
 install: true
 
-#before_script:
-#  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
+before_script:
+  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 #  - go get github.com/moldabekov/spinner                        # Linter
 #  - go get honnef.co/go/tools/cmd/megacheck                     # Badass static analyzer/linter
 
