--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ gobuild_args: -ldflags "-s -w"
 
 install: true
 
-before_script:
-  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
+#before_script:
+#  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 #  - go get github.com/moldabekov/spinner                        # Linter
 #  - go get honnef.co/go/tools/cmd/megacheck                     # Badass static analyzer/linter
 
-script:
-  - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
-  - go vet ./...                             # go vet is the official Go static analyzer
+#script:
+#  - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
+#  - go vet ./...                             # go vet is the official Go static analyzer
 #  - megacheck ./...                          # "go vet on steroids" + linter
 #  - gocyclo -over 19 $GO_FILES               # forbid code with huge functions
 #- golint -set_exit_status $(go list ./...) # one last linter
