--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ gobuild_args: -ldflags "-s -w"
 
 install: true
 
+notifications:
+  email: false
+
 #before_script:
 #  - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 #  - go get github.com/moldabekov/spinner                        # Linter
